--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header>
-        <h1>Cordel Moderno</h1>
-        <p>Por Milton Duarte</p>
+        <h1 id="title">Cordel         Moderno</h1>
+        <p id="sub-title">Por <a href="https://www.recantodasletras.com.br/poesias/3186743"  target="_blank" rel="external" id="link">Milton Duarte</a></p>
     </header>
 
     <main>
@@ -18,7 +18,7 @@
     </main>
 
     <footer>
-        <p>Criado por ___FRG.gg</p>
+        <p id="site-maker">Criado por <a href="https://www.instagram.com/eujoao_lms/" target="_blank" rel="external" id="maker">___FFRG.gg</a></p>
     </footer>
 </body>
 </html>
